Update generated content

--- a/home.html
+++ b/home.html
@@ -233,6 +233,37 @@
     ]
   },
   {
+    "title": "Hàng nghìn người xếp hàng chui qua kiệu Mẫu ở lễ hội TP Tuyên Quang",
+    "content": "Lễ hội đền Hạ, đền Thượng, đền Ỷ La tại TP Tuyên Quang diễn ra vào ngày 11/3/2025, thu hút hàng nghìn người tham gia. Tại lễ hội, một tục lệ độc đáo là người dân ngồi xếp hàng chui qua gầm kiệu Mẫu cầu mong sức khỏe và hạnh phúc. Lễ hội được tổ chức từ năm 2007 và trở thành sự kiện văn hóa quan trọng, thể hiện bản sắc văn hóa dân gian và đạo lý 'uống nước nhớ nguồn'. Các hoạt động lễ hội bao gồm lễ rước Thánh Mẫu và các màn biểu diễn nghệ thuật đặc sắc.",
+    "link": "https://dantri.com.vn/giai-tri/hang-nghin-nguoi-xep-hang-chui-qua-kieu-mau-o-le-hoi-tp-tuyen-quang-20250311171106045.htm",
+    "cat": "du-lich",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại lễ hội TP Tuyên Quang, người dân thực hiện tục lệ gì để cầu mong sức khỏe và hạnh phúc?",
+    "answers": [
+      {
+        "text": "Chui qua gầm kiệu Mẫu",
+        "correct": true
+      },
+      {
+        "text": "Nhảy múa quanh đền",
+        "correct": false
+      },
+      {
+        "text": "Thả hoa đăng xuống sông",
+        "correct": false
+      },
+      {
+        "text": "Tụng kinh cầu an",
+        "correct": false
+      },
+      {
+        "text": "Dâng lễ vật tại đền",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đà Lạt dừng dịch vụ  xe ngựa ở hồ Xuân Hương: rất tốt nhưng rất tiếc",
     "content": "UBND TP Đà Lạt đã quyết định dừng dịch vụ xe ngựa quanh hồ Xuân Hương do nhiều nguyên nhân, bao gồm sự không phù hợp với không gian và nguy cơ gây ách tắc giao thông. Mặc dù đây là dịch vụ yêu thích của nhiều du khách và người dân, vấn đề vệ sinh và an toàn cũng là yếu tố quyết định. Thành phố sẽ chuyển dịch vụ này đến các khu vực khác phù hợp hơn và đã gia hạn hoạt động của các hộ kinh doanh xe ngựa đến cuối tháng 3 để tránh ảnh hưởng đến sinh kế của họ.",
     "link": "https://tuoitre.vn/da-lat-dung-dich-vu-xe-ngua-o-ho-xuan-huong-rat-tot-nhung-rat-tiec-2025031117110327.htm",
@@ -1033,33 +1064,6 @@
     ]
   },
   {
-    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
-    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
-    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
-    "answers": [
-      {
-        "text": "Tạo hiệu quả miễn dịch tốt hơn",
-        "correct": true
-      },
-      {
-        "text": "Giảm chi phí và thời gian tiêm",
-        "correct": false
-      },
-      {
-        "text": "Tăng nguy cơ phản ứng phụ",
-        "correct": false
-      },
-      {
-        "text": "Không cần tiêm vaccine nữa",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lợi ích khi ăn dâu tây thường xuyên",
     "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
     "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
@@ -1082,6 +1086,33 @@
       },
       {
         "text": "Làm yếu hệ miễn dịch.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
+    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
+    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
+    "answers": [
+      {
+        "text": "Tạo hiệu quả miễn dịch tốt hơn",
+        "correct": true
+      },
+      {
+        "text": "Giảm chi phí và thời gian tiêm",
+        "correct": false
+      },
+      {
+        "text": "Tăng nguy cơ phản ứng phụ",
+        "correct": false
+      },
+      {
+        "text": "Không cần tiêm vaccine nữa",
         "correct": false
       }
     ]
@@ -3824,33 +3855,6 @@
     ]
   },
   {
-    "title": "Đời buồn của cậu bé ước được đến trường",
-    "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
-    "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
-    "cat": "giao-duc",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Bình An ước mơ điều gì trong cuộc sống?",
-    "answers": [
-      {
-        "text": "Được đến trường",
-        "correct": true
-      },
-      {
-        "text": "Có nhiều bạn bè",
-        "correct": false
-      },
-      {
-        "text": "Có sức khỏe tốt",
-        "correct": false
-      },
-      {
-        "text": "Được đi du lịch",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Con trai Courtois nguy cơ vô gia cư",
     "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
     "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
@@ -3873,6 +3877,33 @@
       },
       {
         "text": "Courtois không muốn chu cấp cho họ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đời buồn của cậu bé ước được đến trường",
+    "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
+    "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
+    "cat": "giao-duc",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Bình An ước mơ điều gì trong cuộc sống?",
+    "answers": [
+      {
+        "text": "Được đến trường",
+        "correct": true
+      },
+      {
+        "text": "Có nhiều bạn bè",
+        "correct": false
+      },
+      {
+        "text": "Có sức khỏe tốt",
+        "correct": false
+      },
+      {
+        "text": "Được đi du lịch",
         "correct": false
       }
     ]
