Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Taxi bỏ chạy sau khi tông chết thai phụ",
+    "content": "Vào sáng ngày 11/3, một vụ tai nạn nghiêm trọng xảy ra trên đường ĐT 769 khi một chiếc taxi lấn làn và tông vào một cặp vợ chồng trẻ đang đi xe máy. Hậu quả là người vợ mang thai đã không qua khỏi do bị thương nặng. Sau vụ tai nạn, tài xế taxi đã bỏ chạy khoảng ba km trước khi bị cảnh sát chặn lại.",
+    "link": "https://vnexpress.net/taxi-bo-chay-sau-khi-tong-chet-thai-phu-4860023.html",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Vụ tai nạn xảy ra do nguyên nhân gì?",
+    "answers": [
+      {
+        "text": "Taxi lấn làn tông vào xe máy",
+        "correct": true
+      },
+      {
+        "text": "Xe máy va chạm với một chiếc ô tô khác",
+        "correct": false
+      },
+      {
+        "text": "Người vợ không đội mũ bảo hiểm",
+        "correct": false
+      },
+      {
+        "text": "Tài xế taxi không có bằng lái",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Madam Pang khóc khi LĐBĐ Thái Lan gánh nợ gần 500 triệu baht",
     "content": "Chủ tịch Nualphan Lamsam (Madam Pang) đã khóc trong buổi họp báo khi thông báo rằng Liên đoàn Bóng đá Thái Lan (FAT) phải trả khoản nợ lên tới 492 triệu baht, tương đương 370 tỷ đồng, do thua kiện Công ty TNHH Siam Sport. Vụ kiện kéo dài 9 năm kết thúc với phán quyết của Tòa án Tối cao Thái Lan yêu cầu FAT bồi thường 360 triệu baht và lãi suất. Madam Pang khẳng định sẽ làm mọi cách để bảo vệ lợi ích của liên đoàn và đã quyết định đưa vấn đề lên ủy ban đặc biệt để tìm giải pháp khẩn cấp.",
     "link": "https://vnexpress.net/madam-pang-khoc-khi-ldbd-thai-lan-ganh-no-gan-500-trieu-baht-4860037.html",
@@ -1091,28 +1118,28 @@
     ]
   },
   {
-    "title": "Xe máy từ từ sang đường bị ôtô đâm ngã",
-    "content": "Vào ngày 9/3 tại quốc lộ 37b, Thái Bình, một người đàn ông điều khiển xe máy đã từ từ sang đường mà không có tín hiệu xin đường. Khi xe ôtô đi tới, người này bất ngờ chuyển hướng rẽ trái và bị ôtô đâm ngã. May mắn là không có thương vong xảy ra, nhưng tình huống này nhấn mạnh tầm quan trọng của việc sử dụng tín hiệu và quan sát kỹ lưỡng khi tham gia giao thông.",
-    "link": "https://vnexpress.net/xe-may-tu-tu-sang-duong-bi-oto-dam-nga-4859533.html",
-    "cat": "oto-xe-may",
-    "positivity": 4,
-    "importance": 6,
-    "question": "Tại sao người đàn ông đi xe máy lại bị ôtô đâm ngã?",
+    "title": "Lợi ích khi ăn dâu tây thường xuyên",
+    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
     "answers": [
       {
-        "text": "Vì không có tín hiệu xin đường khi chuyển hướng.",
+        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
         "correct": true
       },
       {
-        "text": "Vì lái xe ôtô chạy quá nhanh.",
+        "text": "Tăng huyết áp nhanh chóng.",
         "correct": false
       },
       {
-        "text": "Vì người điều khiển xe máy không đội mũ bảo hiểm.",
+        "text": "Gây ra tình trạng thừa cân.",
         "correct": false
       },
       {
-        "text": "Vì thời tiết xấu nên tầm nhìn kém.",
+        "text": "Làm yếu hệ miễn dịch.",
         "correct": false
       }
     ]
@@ -1140,33 +1167,6 @@
       },
       {
         "text": "Không cần tiêm vaccine nữa",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lợi ích khi ăn dâu tây thường xuyên",
-    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
-    "answers": [
-      {
-        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
-        "correct": true
-      },
-      {
-        "text": "Tăng huyết áp nhanh chóng.",
-        "correct": false
-      },
-      {
-        "text": "Gây ra tình trạng thừa cân.",
-        "correct": false
-      },
-      {
-        "text": "Làm yếu hệ miễn dịch.",
         "correct": false
       }
     ]
