Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -135,6 +135,37 @@
     ]
   },
   {
+    "title": "Ai dễ bị ngưng thở khi ngủ?",
+    "content": "Hội chứng ngưng thở khi ngủ không chỉ xảy ra ở người lớn mà còn có thể ảnh hưởng đến trẻ em. Nhiều người có suy nghĩ sai lầm rằng trẻ em không mắc phải tình trạng này. Bài viết chỉ ra rằng có nhiều yếu tố làm tăng nguy cơ mắc hội chứng ngưng thở khi ngủ ở trẻ em, do đó cần chú ý và phát hiện sớm để điều trị kịp thời.",
+    "link": "https://vnexpress.net/ai-de-bi-ngung-tho-khi-ngu-4859945.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ai là đối tượng dễ mắc hội chứng ngưng thở khi ngủ?",
+    "answers": [
+      {
+        "text": "Trẻ em",
+        "correct": true
+      },
+      {
+        "text": "Người lớn",
+        "correct": false
+      },
+      {
+        "text": "Người cao tuổi",
+        "correct": false
+      },
+      {
+        "text": "Phụ nữ mang thai",
+        "correct": false
+      },
+      {
+        "text": "Người có bệnh tim mạch",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
     "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
     "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
@@ -1051,28 +1082,28 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn dâu tây thường xuyên",
-    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
+    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
+    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
+    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
     "cat": "suc-khoe",
-    "positivity": 9,
+    "positivity": 7,
     "importance": 8,
-    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
+    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
     "answers": [
       {
-        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
+        "text": "Có, nhưng không phải tất cả trường hợp.",
         "correct": true
       },
       {
-        "text": "Tăng huyết áp nhanh chóng.",
+        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
         "correct": false
       },
       {
-        "text": "Gây ra tình trạng thừa cân.",
+        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
         "correct": false
       },
       {
-        "text": "Làm yếu hệ miễn dịch.",
+        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
         "correct": false
       }
     ]
@@ -1105,28 +1136,28 @@
     ]
   },
   {
-    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
-    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
-    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
+    "title": "Lợi ích khi ăn dâu tây thường xuyên",
+    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 9,
     "importance": 8,
-    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
+    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
     "answers": [
       {
-        "text": "Có, nhưng không phải tất cả trường hợp.",
+        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
         "correct": true
       },
       {
-        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
+        "text": "Tăng huyết áp nhanh chóng.",
         "correct": false
       },
       {
-        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
+        "text": "Gây ra tình trạng thừa cân.",
         "correct": false
       },
       {
-        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
+        "text": "Làm yếu hệ miễn dịch.",
         "correct": false
       }
     ]
@@ -3521,37 +3552,6 @@
     ]
   },
   {
-    "title": "Người trẻ chọn sếp",
-    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
-    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
-    "answers": [
-      {
-        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
-        "correct": true
-      },
-      {
-        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
-        "correct": false
-      },
-      {
-        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
     "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
     "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
@@ -3605,6 +3605,37 @@
       },
       {
         "text": "Không cần lo lắng về sự phát triển của AI",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Người trẻ chọn sếp",
+    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
+    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
+    "answers": [
+      {
+        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
+        "correct": true
+      },
+      {
+        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
+        "correct": false
+      },
+      {
+        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
         "correct": false
       }
     ]
@@ -3664,33 +3695,6 @@
     ]
   },
   {
-    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
-    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
-    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
-    "answers": [
-      {
-        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
-        "correct": true
-      },
-      {
-        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
-        "correct": false
-      },
-      {
-        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
-        "correct": false
-      },
-      {
-        "text": "Va chạm giao thông không bao giờ bị phạt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bác sĩ vẽ bản đồ tim cứu sản phụ thoát cửa tử",
     "content": "Một sản phụ 36 tuổi đã thoát khỏi nguy cơ tử vong trong ca mổ sinh nhờ vào sự can thiệp kịp thời của bác sĩ. Trong quá trình mang thai, chị gặp phải tình trạng nhịp tim nhanh lên đến 190 lần/phút và không đáp ứng với thuốc điều trị. Các bác sĩ đã sử dụng kỹ thuật lập bản đồ tim 3D để xác định nguyên nhân và thực hiện đốt điện giúp nhịp tim trở lại bình thường, đảm bảo sự an toàn cho cả mẹ và bé.",
     "link": "https://vnexpress.net/bac-si-ve-ban-do-tim-cuu-san-phu-thoat-cua-tu-4858948.html",
@@ -3717,6 +3721,33 @@
       },
       {
         "text": "Không thực hiện mổ mà chỉ theo dõi tình trạng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
+    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
+    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
+    "answers": [
+      {
+        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
+        "correct": false
+      },
+      {
+        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
+        "correct": false
+      },
+      {
+        "text": "Va chạm giao thông không bao giờ bị phạt.",
         "correct": false
       }
     ]
@@ -4209,6 +4240,33 @@
     ]
   },
   {
+    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
+    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
+    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
+    "answers": [
+      {
+        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng doanh số bán hàng.",
+        "correct": false
+      },
+      {
+        "text": "Để giới thiệu mẫu xe mới.",
+        "correct": false
+      },
+      {
+        "text": "Để thay đổi thiết kế xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "6 nhóm thực phẩm người hen phế quản nên tránh",
     "content": "Bài viết liệt kê 6 nhóm thực phẩm mà người mắc bệnh hen phế quản nên tránh để phòng ngừa các cơn hen tái phát. Các loại thực phẩm này bao gồm thực phẩm giàu calo, thực phẩm có gas, thực phẩm chứa chất bảo quản, thực phẩm gây dị ứng, thực phẩm mặn và các chất béo không lành mạnh. Những thực phẩm này có thể làm trầm trọng thêm tình trạng bệnh và gây khó khăn trong việc hô hấp. Người bệnh nên chú ý đến chế độ ăn uống để kiểm soát triệu chứng hiệu quả hơn.",
     "link": "https://vnexpress.net/6-nhom-thuc-pham-nguoi-hen-phe-quan-nen-tranh-4859245.html",
@@ -4235,33 +4293,6 @@
       },
       {
         "text": "Thực phẩm chiên và đồ ăn nhanh",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
-    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
-    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
-    "answers": [
-      {
-        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng doanh số bán hàng.",
-        "correct": false
-      },
-      {
-        "text": "Để giới thiệu mẫu xe mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thay đổi thiết kế xe.",
         "correct": false
       }
     ]
